[gd_scene load_steps=4 format=3 uid="uid://ko54eungd8tj"]

[ext_resource type="Script" path="res://EventInfoPanel.gd" id="1_apv0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1manp"]
bg_color = Color(100, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wi2p"]
bg_color = Color(0.6, 100, 0.6, 1)

[node name="Control" type="Popup"]
title = "Add Event"
size = Vector2i(1200, 992)
visible = true
min_size = Vector2i(1200, 0)
script = ExtResource("1_apv0h")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
placeholder_text = "Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="Tag" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
placeholder_text = "Tag"
caret_blink = true
caret_blink_interval = 0.5

[node name="TimeSettings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1manp")

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateEvent" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_0wi2p")

[connection signal="close_requested" from="." to="." method="_close_window"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TimeSettings" to="." method="_open_time_setting_panel"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2/CreateEvent" to="." method="_on_create_event"]
